<resources>
    <string name="app_name">CoffeTec</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Nombre:</string>
    <string name="cedula">Cedula:</string>
    <string name="tel1">Telefono:</string>
    <string name="finca1">Finca:</string>
    <string name="correo1">Correo:</string>
    <string name="nombre_com">Nombre completo</string>
    <string name="finca">Finca</string>
    <string name="doc">Documento</string>
    <string name="tel">Telefono</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="confirm">Confirmar contraseña</string>
    <string name="foto">Foto</string>
    <string name="camara">Camara</string>
    <string name="galeria">Galeria</string>
    <string name="registro">Registrarme</string>
    <string name="sesion">Inicia sesion</string>
    <string name="registrar">Registrate</string>
    <string name="ayuda">¿Olvidate tu contraseña? Obten ayuda</string>
    <string name="cuenta">¿Tienes una cuenta?</string>
    <string name="no_cuenta">¿No tienes cuenta?</string>
    <string name="perfil">Perfil</string>
    <string name="foto_perfil">Elige una foto de perfil:</string>
    <string name="edit">Edita tu perfil</string>
    <string name="no_guardar">¿Desea salir sin guardar?</string>
    <string name="txt_guardar">Recuerde que si sale en estos momentos se perderan los cambios realizados.</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ok_guardar">Cambios realizados con exito</string>

    <string name="title_add_tree">Registro de cafeto</string>
    <string name="add_photo_add_tree">Tomar foto</string>
    <string name="register">Registrar</string>
    <string name="name_hint">Nombre</string>
    <string name="id_hint">ID</string>
    <string name="date_hint">Fecha</string>
    <string name="disease_hint">Tipo de enfermedad</string>
    <string name="latitude_hint">Latitud</string>
    <string name="longitude_hint">Longitud</string>
    <string name="title_show_tree">Datos del cafeto</string>
    <string name="state_connect">Conectado</string>
    <string name="state_disconnect">Desconectado</string>
    <string name="location">Ubicación:</string>
    <string name="successfull_update">Se han realizado los cambios con exito!</string>
    <string name="state_title">Estado:</string>
    <string-array name="tree_sicks">
        <item>Roya</item>
        <item>Mancha de hierro</item>
        <item>Antracnosis</item>
        <item>Mal rosado</item>
        <item>Ojo de gallo</item>
        <item>Mal del talluelo</item>
        <item>No</item>
    </string-array>
    <string-array name="tree_states">
        <item>Enfermo</item>
        <item>Talado</item>
        <item>Recuperado</item>
    </string-array>

    <string name="sensors_title">SENSORES</string>
    <string name="sick_trees_title">CAFETOS ENFERMOS</string>
    <string name="harvest_title">COSECHAS</string>

</resources>