<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_btn"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/registro"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_top"
        app:layout_constraintBottom_toTopOf="@+id/houseCampET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="72dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/registrar"
            android:textColor="@color/brown"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/backBtn"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_to_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/nameET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/background_input"
        android:ems="10"
        android:hint="@string/nombre_com"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_input"
        android:ems="10"
        android:hint="@string/foto"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordConfirmET"
        app:layout_constraintStart_toStartOf="@+id/passwordConfirmET"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmET" />

    <EditText
        android:id="@+id/houseCampET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/background_input"
        android:ems="10"
        android:hint="@string/finca"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameET" />

    <EditText
        android:id="@+id/documentET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_input"
        android:ems="10"
        android:hint="@string/doc"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="@+id/houseCampET"
        app:layout_constraintStart_toStartOf="@+id/houseCampET"
        app:layout_constraintTop_toBottomOf="@+id/houseCampET" />

    <EditText
        android:id="@+id/emailSignUpET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_input"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="@+id/documentET"
        app:layout_constraintStart_toStartOf="@+id/documentET"
        app:layout_constraintTop_toBottomOf="@+id/documentET" />

    <EditText
        android:id="@+id/phoneET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_input"
        android:ems="10"
        android:hint="@string/tel"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="@+id/emailSignUpET"
        app:layout_constraintStart_toStartOf="@+id/emailSignUpET"
        app:layout_constraintTop_toBottomOf="@+id/emailSignUpET" />

    <EditText
        android:id="@+id/passwordSignUpET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_input"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:password="true"
        app:layout_constraintEnd_toEndOf="@+id/phoneET"
        app:layout_constraintStart_toStartOf="@+id/phoneET"
        app:layout_constraintTop_toBottomOf="@+id/phoneET" />

    <EditText
        android:id="@+id/passwordConfirmET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_input"
        android:ems="10"
        android:hint="@string/confirm"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordSignUpET"
        app:layout_constraintStart_toStartOf="@+id/passwordSignUpET"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignUpET" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/cuenta"
        android:textColor="@color/green"
        app:layout_constraintEnd_toStartOf="@+id/signInTxt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/signUpBtn"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />

    <TextView
        android:id="@+id/signInTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="54dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sesion"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/signUpBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />
</androidx.constraintlayout.widget.ConstraintLayout>